--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -1,7 +1,7 @@
 #about-page
     .author-box
         .author-avatar
-            img.no-lightbox(src='https://lsky.kissshot.site/img/2025/02/06/67a44befd393a.jpg')
+            img.no-lightbox(src='https://lsky.kissshot.site/img/2025/02/07/67a56c61e74fd.webp')
         .author-text
             .title Kissshot
             .desrc 不可结缘 徒增伤悲
