--- a/themes/butterfly/source/css/_layout/post.styl
+++ b/themes/butterfly/source/css/_layout/post.styl
@@ -153,9 +153,9 @@ no-beautify()
 
   img
     display: block
-    margin: 0 auto
-    width: 100%
-
+    margin: 0 auto 20px
+    max-width: 100%
+    max-height: 555px
   p
     margin: 0 0 .8rem
 
