--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -297,6 +297,7 @@
         padding: 1px 6px
         color: var(--toc-link-color)
         transition: all .2s ease-in-out
+        font-size: 14px
 
         &:hover
           color: $theme-color
