--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -21,7 +21,7 @@
     position: relative
     overflow: hidden
     margin-top: 20px
-    padding: 20px 24px
+    padding: 20px 15px
 
     if hexo-config('aside.mobile') == false
       +maxWidth768()
@@ -254,8 +254,7 @@
     .toc-content
       overflow-y: scroll
       overflow-y: overlay
-      margin: 0 -24px
-      max-height: calc(100vh - 120px)
+      width: 100%
 
       +maxWidth900()
         max-height: calc(100vh - 140px)
