--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -41,8 +41,8 @@
 
     .post_cover {
       overflow: hidden;
-      width: calc(50% + 87px);
-      height: 100%;
+      width: 100%;
+      height: 55%;
 
       img.post_bg {
         @extend .imgHover;
@@ -64,7 +64,7 @@
 
     & >.recent-post-info {
       padding: 15px 20px;
-      width: calc(50% + 87px);
+      width: 100%;
       height: 45%;
       display: flex;
       flex-flow: column nowrap;
@@ -185,7 +185,6 @@
     +maxWidth768() {
       .recent-post-info {
         margin: 0;
-
         .content {
           padding: 0;
         }
