--- a/themes/butterfly/source/css/_layout/rightside.styl
+++ b/themes/butterfly/source/css/_layout/rightside.styl
@@ -1,9 +1,10 @@
 #rightside
   position: fixed
-  right: -48px
+  // right: -48px
+  right: 15px
   bottom: $rightside-bottom
   z-index: 100
-  opacity: 0
+  // opacity: 0
   transition: all .5s
 
   #rightside-config-hide
