--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -9,7 +9,7 @@
     background: transparent;
     flex-direction: column;
     width: calc(50% - 20px);
-    margin: 20px 10px;
+    margin: 10px;
     +maxWidth768() {
      width: calc(100% - 10px)
     }
