取消hover旋转效果

--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -49,8 +49,8 @@
       i
         transition: all .3s
 
-        &:hover
-          transform: rotate(360deg)
+        // &:hover
+        //   transform: rotate(360deg)
 
     #card-info-btn
       display: block
@@ -333,8 +333,8 @@
     transition: filter 375ms ease-in .2s, transform .3s
     object-fit: cover
 
-    &:hover
-      transform: rotate(360deg)
+    // &:hover
+    //   transform: rotate(360deg)
 
 .site-data
   display: table
