--- a/themes/butterfly/source/css/_page/flink.styl
+++ b/themes/butterfly/source/css/_page/flink.styl
@@ -24,10 +24,10 @@
         +maxWidth600()
           width: calc(100% - 15px) !important
 
-        &:hover
-          .flink-item-icon
-            margin-left: -10px
-            width: 0
+        // &:hover
+        //   .flink-item-icon
+        //     margin-left: -10px
+        //     width: 0
 
         &:before
           position: absolute
@@ -38,7 +38,7 @@
           z-index: -1
           background: var(--text-bg-hover)
           content: ''
-          transition: transform .3s ease-out
+          transition: transform .05s ease-out
           transform: scale(0)
 
         &:hover:before,
