--- a/themes/butterfly/source/css/_page/homepage.styl
+++ b/themes/butterfly/source/css/_page/homepage.styl
@@ -115,8 +115,11 @@ $indexEnable = hexo-config('cover.index_enable')
 
       & > .article-title
         @extend .limit-more-line
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         color: var(--text-highlight-color)
-        font-size: 1.55em
+        font-size: 1.35em
         line-height: 1.4
         transition: all .2s ease-in-out
         -webkit-line-clamp: 2
